--- a/app/templates/_proposer_form.html
+++ b/app/templates/_proposer_form.html
@@ -82,7 +82,7 @@
       </button>
       <p class="form-note">
         Je valide chaque contribution pour garantir la qualité des liens
-        partagés. Besoin du mode détaillé ?
+        partagés.
         <a href="{{ url_for('public.formulaire') }}">Ouvre le formulaire complet</a>.
       </p>
     </div>
