--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
     </title>
     <meta
       name="description"
-      content="{% block seo_description %}Accédez facilement aux sites réunionnais essentiels : culture, emploi, services, transports, météo et plus.{% endblock %}"
+      content="{% block seo_description %}Accédez facilement aux sites réunionnais essentiels et découvrez les talents de la Réunion : culture, emploi, services, transports, météo et plus.{% endblock %}"
     />
 
     <!-- Canonical -->
@@ -232,7 +232,7 @@
       <p><strong>Réunion Wiki</strong> - Simplifions l'information locale.</p>
       <nav>
         <a href="{{ url_for('public.faq') }}">FAQ</a> |
-        <a href="{{ url_for('public.mentions_legales') }}" target="_blank">Mentions légales</a> |
+        <a href="{{ url_for('public.mentions_legales') }}" target="">Mentions légales</a> |
         <a href="{{ url_for('public.contact') }}">Contact</a>
       </nav>
     </footer>
